# pypesel

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
pesel/: __init__.py  __main__.py  main.py  pesel.py
src/pesel/: __init__.py  __main__.py  main.py  pesel.py
tests/: test_cli_pesel.py  test_correct_pesel.py  test_generated_pesel.py  test_incorrect_pesel.py
